--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,12 +1,12 @@
 ---
 ---
 
-pre {
+h1 {
   background: rgba(0, 0, 0, 0.9);
   border: 1px solid rgba(255, 255, 255, 0.15);
   padding: 10px;
   font-size: 16px;
-  color: #5195B6;
+  color: #ff0000;
   border-radius: 2px;
   word-wrap: normal;
   overflow: auto;
