--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,4 +4,7 @@
 h1, h2, h3, h4, h5, h6 {
     color: #5195B6 !important;
 }
+header {
+    border-bottom: 1px dashed #5195B6 !important;
+}
 @import "{{ site.theme }}";
