--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,9 @@
 ---
 
 h1, h2, h3, h4, h5, h6 {
-    color: #5195B6 !important;
+    color: #63c0f5 !important;
 }
 header {
-    border-bottom: 1px dashed #5195B6 !important;
+    border-bottom: 1px dashed #63c0f5 !important;
 }
 @import "{{ site.theme }}";
